[package]
name = "qool"
version = "0.0.1"
description = "A command line tool to generate QR code."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/qool"
keywords = ["qr", "qrcode"]
categories = ["encoding", "command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
log = "0.4"
fmtlog = { git = "https://github.com/watcol/fmtlog", branch = "main" }
tempfile = "3.2"
iron = "0.6"
staticfile = "0.5"
local_ipaddress = "0.1"
