[package]
name = "qool"
version = "0.1.0"
description = "A simple CLI file sharing tool between PC and phone via QR code."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/qool"
keywords = ["qr", "qrcode", "cli", "http", "network", "web"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT AND CC-BY-4.0"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "assets/*",
  "src/**/*.rs",
]

[dependencies]
atty = "0.2"
clipboard = "0.5"
fmtlog = "0.1"
iron = "0.6"
log = "0.4"
qr2term = "0.2"
staticfile = "0.5"
structopt = "0.3"
tempfile = "3.2"
thiserror = "1.0"
